full-moon/tests/roblox_cases/fail/parser/generic_must_declare_default/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected default type after type name
  ┌─ source.lua:1:29
  │
1 │ type Foo<X, Y, Z = string, P> = nil
  │                             ^


